--- a/docker-compose - Kopie.yml
+++ b/docker-compose - Kopie.yml
@@ -21,7 +21,7 @@ services:
       context: ./pwa
       target: api_platform_pwa_prod
     environment:
-      API_PLATFORM_CLIENT_GENERATOR_ENTRYPOINT: http://caddy
+      API_PLATFORM_CLIENT_GENERATOR_ENTRYPOINT: http://localhost:8080
 
   caddy:
     build:
@@ -32,7 +32,7 @@ services:
       - pwa
     environment:
       PWA_UPSTREAM: pwa:3000
-      SERVER_NAME: ${SERVER_NAME:-localhost, caddy:80}
+      SERVER_NAME: ${SERVER_NAME:-localhost:8080}
       MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_PUBLISHER_JWT_KEY:-!ChangeMe!}
       MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_SUBSCRIBER_JWT_KEY:-!ChangeMe!}
     restart: unless-stopped
@@ -42,16 +42,16 @@ services:
       - caddy_config:/config
     ports:
       # HTTP
-      - target: 80
-        published: 80
+      - target: 8080
+        published: 8080
         protocol: tcp
       # HTTPS
-      - target: 443
-        published: 443
+      - target: 8443
+        published: 8443
         protocol: tcp
       # HTTP/3
-      - target: 443
-        published: 443
+      - target: 8443
+        published: 8443
         protocol: udp
 
   database:
